[package]
name = "btc5min-limit-order"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
hex = "0.4"
alloy = { version = "1.3", features = ["full"] }
alloy-contract = "1.3"
alloy-sol-types = "1.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
toml = "0.8"
walkdir = "2.5"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", features = ["clob", "ws", "ctf", "gamma"] }
polyoxide-relay = "0.15"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
